[package]
name = "config"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "MIT"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"
once_cell = "1.10.0"
duration-str = "0.4.0"

[dev-dependencies]

[features]
default = []
